<resources>
    <string name="app_name">Tourist App</string>
    <string name="search">Search</string>
    <string name="map">Map</string>
    <string name="saved">Saved</string>
    <string name="enter_city">Enter city</string>
    <string name="current_location">Current Location</string>
    <string name="coordinates">%1$s : %2$s</string>
    <string name="save_place">Save place</string>
    <string name="empty_response">Nothing was found by your request</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="repeat_password">Repeat password</string>
    <string name="login_error">Login length should be greater than 4</string>
    <string name="password_error">Password length should be greater than 4</string>
    <string name="repeat_password_error">Passwords must be the same</string>
    <string name="text_fields_message">Complete all text fields</string>
    <string name="existing_user_message">User with the same login already exists</string>
    <string name="user_not_exist_message">User with given login is not exist</string>
    <string name="deleted_item_message">Item was successfully deleted</string>
    <string name="radius_option">Select radius</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
</resources>